# chat_geo_lab

./: .gitattributes  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
utilities/: convert2parquet.py  polars_eda.py
