[project]
name = "chat-geo-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
core = [
    "dask>=2025.7.0",
    "fiona>=1.10.1",
    "geopandas>=1.1.1",
    "pyogrio>=0.11.1",
    "pyproj>=3.7.2",
    "pystac-client>=0.9.0",
    "rasterio>=1.4.3",
    "rioxarray>=0.19.0",
    "rtree>=1.4.1",
    "shapely>=2.1.1",
    "stackstac>=0.5.1",
    "xarray>=2025.9.0",
    "zarr>=3.1.2",
]
db = [
    "geoalchemy2>=0.18.0",
    "psycopg[binary]>=3.2.10",
    "sqlalchemy>=2.0.43",
]
dev = [
    "git-cliff>=2.10.0",
    "ipykernel>=6.30.1",
    "nbstripout>=0.8.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.12",
    "setuptools-scm>=9.2.0",
]
dl = [
    "lightning>=2.5.5",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.8.0",
    "torchgeo>=0.7.1",
    "torchvision>=0.23.0",
]
ml = [
    "scikit-learn>=1.7.2",
    "xgboost>=3.0.5",
]
viz = [
    "folium>=0.20.0",
    "matplotlib>=3.10.6",
]
